[gd_scene load_steps=3 format=3 uid="uid://bn3oj7x7hlfgw"]

[ext_resource type="Script" path="res://menu.gd" id="1_6jo3y"]
[ext_resource type="Texture2D" uid="uid://c5tlhtqteehbo" path="res://assets/maps/jungle/elementy/dzień.png" id="2_wnooc"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 99.0
offset_top = -359.0
offset_right = 99.0
offset_bottom = -359.0
grow_vertical = 0
size_flags_horizontal = 4
script = ExtResource("1_6jo3y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = -104.0
offset_right = 71.0
offset_bottom = -3.0
scale = Vector2(4, 4)

[node name="Start" type="Button" parent="VBoxContainer"]
light_mask = 2
texture_filter = 1
layout_mode = 2
text = "Start"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Dzień" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(805, -63.75)
scale = Vector2(1.76172, 1.38519)
texture = ExtResource("2_wnooc")

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
